--- a/less/header.less
+++ b/less/header.less
@@ -207,6 +207,8 @@ html.js {
     position: absolute;
     top: 0;
     left: 0;
+    max-height: 60px;
+    overflow: hidden;
 
     a.navbar-brand {
     }
